Bug 38066: Pop-up window footers can block page content
The staff interface's default <body> padding is enough to accommmodate
the langugage-selection footer but not the taller fixed footer on pop-up
window pages. This patch adds some CSS to increase the padding on those
pages to prevent page content from being obscured by the footer
navigation.

The patch also adjusts the CSS of the "Back to top" arrow so that it
isn't hidden by fixed footer.

To test, apply the patch and rebuild the staff interface CSS.

- In the staff client, go to Cataloging -> New record.
- In tab one, click the plugin button on tag 100 subfield a.
- Perform an authority search which will return results.
- Scroll down to the bottom of the window and confirm that the last
  lines of the search results are not obscured by the footer.

This change should apply to all pop-up windows which include the same
fixed footer markup, e.g. any cataloging plugin; the transfer order
window; vendor search when adding a subscription, etc.

Sponsored-by: Athens County Public Libraries

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -736,6 +736,10 @@ body {
     padding: 0;
     text-align: left;
 
+    &:has( nav.fixed-bottom ) {
+        padding-bottom: 6rem;
+    }
+
     &.nobackdrop {
         .modal-backdrop {
             opacity: 0;
@@ -4830,7 +4834,7 @@ div .suggestion_note {
     position: fixed;
     bottom: 40px;
     right: 40px;
-    z-index: 1000;
+    z-index: $zindex-tooltip;
 }
 
 @media only screen and ( max-width: 1200px ) {
